Phase 5 (#93): SCM_RIGHTS unix-fd passing over the owned connection (#102)
Wire UnixFd passing through the self-owned junixsocket D-Bus connection so
file descriptors round-trip natively (no dbus-java), in method-call args,
method replies, and signals alike.

Outgoing (DBusWireConnection.writeMessage): a depth-first, body-order walk
collects every UnixFd in the message body, replaces each with its 0-based
index into the attachment array (the `h` wire value is that index), and sets
the UNIX_FDS header field to the count. Under the existing writeLock the raw
fds are attached as SCM_RIGHTS ancillary data via junixsocket
setOutboundFileDescriptors immediately before the framed write, so the kernel
delivers them together with this message's bytes; pending outbound fds are
cleared defensively after the send.

Incoming: the connect path sizes the ancillary receive buffer
(ensureAncillaryReceiveBufferSize). After each frame the reader drains
junixsocket's received descriptors into a FIFO; a message declaring UNIX_FDS
takes that many in arrival order, and a signature-driven walk rewrites each
`h` index in the decoded body to a UnixFd wrapping the corresponding received
descriptor (containers -- structs/variants/arrays/dicts -- recurse).

Bridge + ownership (JvmUnixFdSupport): outbound ints become throwaway
FileDescriptors via NativeUnixSocket.initFD (kernel dup-on-send leaves ours
open). Received descriptors are duplicated so the resulting UnixFd owns an
independent fd, then the junixsocket-owned original is closed -- closing the
object fires junixsocket's attached close-callback, evicting it from the
received-fd table -- so received fds are neither leaked until socket close nor
double-closed.

Tests:
- DBusWireConnectionTest: a UnixFd sent between two owned connections traverses
  the dbus daemon (which relays passed fds via SCM_RIGHTS) and is proven a LIVE
  duplicate -- bytes written into the original pipe write-end are read back from
  the received fd.
- cross_test Dbusm